# zotero-library-mcp

./: .gitignore  README.md  pyproject.toml  server.json
src/zotero_mcp/: _helpers.py  annotations.py  collections.py  library.py  papers.py  server.py  tags.py
tests/: test_fuzzy_library_search.py  test_fuzzy_match.py
