[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp"
version = "0.1.0"
description = "MCP server for adding papers and books to Zotero by DOI, arXiv ID, or ISBN"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyzotero>=1.5.0",
    "httpx>=0.27.0",
]

[project.scripts]
zotero-mcp = "zotero_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]
